<resources>
    <string name="app_name">Gallery</string>
    <string name="greeting">Welcome to Gallery!</string>
    <string name="create_an_account">Create an account</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="cancel">Cancel</string>
    <string name="sing_up">Sing Up</string>
    <string name="user_name_">User Name <font color="#ED3E3E">*</font></string>
    <string name="user_name">User Name</string>
    <string name="birthday">Birthday</string>
    <string name="phone_number_">Phone number <font color="#ED3E3E">*</font></string>
    <string name="phone_number">Phone number</string>
    <string name="email_">Email <font color="#ED3E3E">*</font></string>
    <string name="password_">Password <font color="#ED3E3E">*</font></string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password_">Confirm password <font color="#ED3E3E">*</font></string>
    <string name="sing_in">Sing In</string>
    <string name="new_">New</string>
    <string name="popular">Popular</string>
    <string name="_search">Search</string>
    <string name="sorry">Sorry!</string>
    <string name="error_details">There are no pictures.\n Please come back later.</string>
    <string name="loading">Loading…</string>

    <string name="short_name">Name is shorter than 3 characters</string>
    <string name="email_already_taken">Email is already taken</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="password_less_then_8">Password must be more than 8 characters long</string>
    <string name="enter_birthday_date">Enter the date of your birthday</string>
    <string name="date_before_today">Specify the date before today</string>
    <string name="enter_correct_number">Enter the correct phone number</string>
    <string name="enter_correct_email">Enter the correct email</string>
    <string name="user_not_found">User was not found</string>
    <string name="invalid_password">Invalid password</string>
    <string name="save">Save</string>
    <string name="personal_data">Personal data</string>
    <string name="you_can_delete_your_account">You can <font color="#CF497E">delete your account</font></string>
    <string name="sing_out">Sing Out</string>

</resources>